// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Units tests for <GifExpertApp /> (Main) should show GifExpertApp component 1`] = `
<Fragment>
  <h2>
    Gif expert App
  </h2>
  <AddCategory
    setCategories={[Function]}
  />
  <hr />
  <ol />
</Fragment>
`;

exports[`Units tests for <GifExpertApp /> (Main) should show list of categories 1`] = `
<Fragment>
  <h2>
    Gif expert App
  </h2>
  <AddCategory
    setCategories={[Function]}
  />
  <hr />
  <ol>
    <GifGrid
      category="Miami"
      key="Miami"
    />
    <GifGrid
      category="Cuba"
      key="Cuba"
    />
    <GifGrid
      category="Paris"
      key="Paris"
    />
  </ol>
</Fragment>
`;
